<?xml version="1.0"?>
<package format="2">
  <name>icclab_summit_xl</name>
  <version>0.0.1</version>
  <description>The icclab_summit_xl package</description>
  <maintainer email="toff@zhaw.ch">Giovanni Toffetti</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <build_depend>summit_xl_description</build_depend>
  <exec_depend>summit_xl_description</exec_depend>

</package>
